# bits-whisperer

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  build.bat  build_installer.py  feature_flags.json  installer.iss  pip_output.txt  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-providers.txt  requirements.txt  test_result.txt  test_results.txt
.github/: accessibility.agent.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: ANNOUNCEMENT.html  ANNOUNCEMENT.md  CHANGELOG.md  PRD.html  PRD.md  README.html  README.md  USER_GUIDE.html  USER_GUIDE.md  build_html_docs.py  docs.css
scripts/: fix_docs_md.py
src/bits_whisperer/: __init__.py  __main__.py  app.py
src/bits_whisperer/core/: __init__.py  ai_service.py  audio_player.py  audio_preprocessor.py  context_manager.py  copilot_service.py  dependency_checker.py  device_probe.py  diarization.py  document_reader.py  feature_flags.py  github_oauth.py  job.py  live_transcription.py  model_manager.py  plugin_manager.py  provider_manager.py  registration_service.py  sdk_installer.py  settings.py  transcoder.py  transcription_service.py  updater.py  wheel_installer.py
src/bits_whisperer/export/: __init__.py  base.py  html_export.py  json_export.py  markdown.py  plain_text.py  srt.py  vtt.py  word_export.py
src/bits_whisperer/providers/: assemblyai_provider.py  auphonic_provider.py  aws_transcribe.py  azure_embedded.py  azure_speech.py  base.py  deepgram_provider.py  elevenlabs_provider.py  gemini_provider.py  google_speech.py  groq_whisper.py  local_whisper.py  openai_whisper.py  parakeet_provider.py  rev_ai_provider.py  speechmatics_provider.py  vosk_provider.py  windows_speech.py
src/bits_whisperer/storage/: __init__.py  database.py  key_store.py
src/bits_whisperer/ui/: __init__.py  add_file_wizard.py  add_provider_dialog.py  agent_builder_dialog.py  ai_settings_dialog.py  audio_player_dialog.py  copilot_chat_panel.py  copilot_setup_dialog.py  live_transcription_dialog.py  main_frame.py  model_manager_dialog.py  progress_dialog.py  queue_panel.py  settings_dialog.py  setup_wizard.py  slash_commands.py  transcript_panel.py  tray_icon.py
src/bits_whisperer/utils/: __init__.py  accessibility.py  constants.py  platform_utils.py
tests/: __init__.py  test_attachments.py  test_constants.py  test_context_manager.py  test_dependency_checker.py  test_export.py  test_feature_flags.py  test_gemini_copilot.py  test_job.py  test_new_features.py  test_phase4_features.py  test_phase5_features.py  test_phase6_budget.py  test_phase7_features.py  test_phase8_features.py  test_providers.py  test_settings.py  test_shutdown.py  test_slash_commands.py
typings/sounddevice/: __init__.pyi
